# bytesim_platform

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml
.github/workflows/: build.yml  e2e.yml  playwright.yml  unit.yml
infra/grafana/dashboards/: red.json
infra/postgres/: 001_init.sql  002_seed.sql  006_plan.sql  007_multi_project.sql  008_resource_ontology.sql  009_production_assets.sql  010_tco.sql  011_engine_registry.sql  012_workload_mix.sql  013_scenarios.sql  014_accuracy_benchmark.sql  015_kvcache.sql  016_engine_fabric.sql  017_jsonb_deep_merge.sql  019_astra_sim_engine.sql  020_engine_registry_v2.sql  021_engine_registry_v2_finalize.sql  022_sim_experiments.sql  023_run_sequences.sql  024_catalog.sql
infra/postgres/down/: 017_jsonb_deep_merge.sql  019_astra_sim_engine.sql  020_engine_registry_v2.sql  021_engine_registry_v2_finalize.sql.skip  README.md
infra/prometheus/: prometheus.yml
reports/: 2026-04-30_C01_Llama31_405B_Astra-sim.md
scripts/: _lib.sh  e2e.sh  e2e_ci.sh  e2e_engines.sh
sdk/: README.md  pyproject.toml
sdk/bytesim/: __init__.py  auth.py  client.py  config.py  errors.py
sdk/bytesim/cli/: __main__.py  _format.py  main.py
sdk/bytesim/resources/: runs.py  specs.py
services/asset-svc/: Dockerfile  go.mod
services/astra-sim-svc/: Dockerfile  pyproject.toml
services/astra-sim-svc/app/: chakra_writer.py  main.py  translator.py  wrapper.py
services/bff/: Dockerfile  pyproject.toml
services/bff/app/: auth.py  event_bus.py  main.py
services/bff/app/api/: artifacts.py  auth.py  catalog.py  engines.py  runs.py  specs.py  streams.py  tco.py
services/bff/app/clients/: asset_svc.py  engine_registry_svc.py  engine_svc.py  ingest_svc.py  run_svc.py  tco_svc.py
services/engine-registry-svc/: Dockerfile  pyproject.toml
services/engine-registry-svc/app/: main.py  router.py  store.py
services/engine-svc/: Dockerfile  pyproject.toml
services/engine-svc/app/: _obs.py  artifacts.py  clients.py  event_bus.py  main.py  pipeline.py
services/ingest-svc/: Dockerfile  pyproject.toml
services/ingest-svc/app/: adapters.py  main.py  store.py
services/run-svc/: Dockerfile  go.mod  go.sum
services/surrogate-svc/: Dockerfile  pyproject.toml
services/surrogate-svc/app/: main.py  predict.py
services/tco-engine-svc/: Dockerfile  pyproject.toml
services/tco-engine-svc/app/: compute.py  main.py  store.py
shared/engine_contracts/: __init__.py  envelope.py  predict.py  pyproject.toml
shared/engine_runtime/: __init__.py  descriptor.py  pyproject.toml  runtime.py
tests/: conftest.py
tests/astra_sim/: conftest.py  test_chakra_writer.py  test_main.py  test_translator.py
tests/bff/: conftest.py  test_auth.py  test_auth_roles.py  test_catalog.py  test_engines.py  test_event_bus_and_streams.py  test_observability.py  test_proxy_routes.py  test_security_hardening.py  test_tco.py
tests/bff_clients/: conftest.py  test_clients.py
tests/db/: test_down_migrations.py  test_jsonb_deep_merge.py  test_pg_stores.py  test_production_assets.py  test_python_store_integration.py  test_resource_ontology.py  test_sql_apply_e2e.py  test_sql_schema.py
tests/engine/: conftest.py  test_main.py  test_pipeline.py
tests/engine_contracts/: conftest.py  test_contract_envelope.py  test_contract_predict.py
tests/engine_registry/: conftest.py  test_engine_registry_api.py  test_engine_router.py
tests/engine_smoke/: conftest.py  test_smoke_matrix.py
tests/ingest/: conftest.py  test_adapters.py  test_ingest_api.py
tests/main_modules/: conftest.py  test_main_imports.py
tests/sdk/: conftest.py  test_cli.py  test_client.py  test_config.py  test_resources.py
tests/surrogate/: conftest.py  test_predict.py
tests/tco/: conftest.py  test_api.py  test_compute.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/e2e/: 01-dashboard.spec.ts  02-topology-build-cluster.spec.ts  03-training-sim-submit.spec.ts  04-reports-compare.spec.ts  05-catalog-roundtrip.spec.ts  06-inference-sim-submit.spec.ts  07-run-detail.spec.ts
web/src/: App.tsx  main.tsx
web/src/__tests__/: api_hooks.test.tsx  app_shell.test.tsx  bottleneck_card.test.tsx  catalog.test.tsx  chart_primitives.test.tsx  client.test.ts  constraints.test.tsx  custom_presets.test.tsx  dashboard.test.tsx  engine_phases.test.tsx  engines.test.tsx  experiment_json.test.tsx  glossary.test.tsx  hardware_parts.test.ts  inference_sim_v2.test.tsx  insights.test.tsx  inspector.test.tsx  kv_footprint.test.tsx  lastrun_panel.test.tsx  live_predict.test.tsx  metrics.test.ts  setup.ts  (+20 more)
(+108 files in other folders)
