[project]
name = "bytesim-bff"
version = "0.1.0"
description = "ByteSim BFF — aggregates run-svc + (future) asset-svc / lineage-svc for the SPA."
requires-python = ">=3.11"
dependencies = [
  "aiokafka>=0.11",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "websockets>=13",
  # Phase 0.3 observability
  "structlog>=24.4",
  "prometheus-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
