[project]
name = "bytesim-engine-registry-svc"
version = "0.1.0"
description = "Engine plugin registry — routes simulation predictions to registered engines and stamps provenance."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "asyncpg>=0.29",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
