[project]
name = "bytesim-engine-svc"
version = "0.1.0"
description = "Five-stage simulation pipeline orchestrator. Pulls queued Runs, calls surrogate-svc, emits artifacts + lifecycle events."
requires-python = ">=3.11"
dependencies = [
  "aiokafka>=0.11",
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn[standard]>=0.32",
  # Phase 0.3 observability
  "structlog>=24.4",
  "prometheus-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
