[project]
name = "bytesim-ingest-svc"
version = "0.1.0"
description = "Production data ingestion — accepts offline snapshots, parses via adapters, gates approval."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "asyncpg>=0.29",
  "python-multipart>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
