[project]
name = "bytesim-surrogate-svc"
version = "0.2.0"
description = "Analytical surrogate that approximates per-strategy training/inference KPIs in <100ms. Reference end-to-end engine implementation (RFC-001)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "httpx>=0.27",          # required by shared/engine_runtime registration loop
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
