[project]
name = "bytesim-tco-engine-svc"
version = "0.1.0"
description = "Technical TCO engine — marginal, comparable, explainable cost computation per Run/Scenario."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "asyncpg>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
