[project]
name = "bytesim-engine-contracts"
version = "0.1.0"
description = "ByteSim shared end-to-end engine contract types (RFC-001 v2). Pure Pydantic, no runtime deps beyond pydantic."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine_contracts"]

[tool.hatch.build.targets.wheel.sources]
"." = "engine_contracts"
