[project]
name = "bytesim-engine-runtime"
version = "0.1.0"
description = "ByteSim engine runtime helpers — drop-in FastAPI mount + self-registration + heartbeat (RFC-001 v2 M2)."
requires-python = ">=3.11"
dependencies = [
  "bytesim-engine-contracts",
  "fastapi>=0.115",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine_runtime"]
